# axum-params

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_params.rs  file_upload.rs  nested_params.rs
src/: error.rs  json.rs  lib.rs  params.rs  query_parser.rs  serde.rs  tests.rs  traits.rs  upload_file.rs  value.rs
