[package]
name = "axum-params"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A Rails-like powerful parameter handling library for Axum"
repository = "https://github.com/cpunion/axum-params"
keywords = ["axum", "params", "serde", "rails"]
categories = ["web-programming"]

[dependencies]
actson = "2.0.1"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-macros = "0.5.0"
form_urlencoded = "1.2.1"
log = "0.4.27"
multer = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tempfile = "3.18.0"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
axum-test = "17.2.0"
env_logger = "0.11.7"
futures-util = "0.3.29"
maplit = "1.0.2"
pretty_assertions = "1.4.0"
serde_json = "1.0.140"

[[example]]
name = "basic_params"
path = "examples/basic_params.rs"

[[example]]
name = "file_upload"
path = "examples/file_upload.rs"

[[example]]
name = "nested_params"
path = "examples/nested_params.rs"
